--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,23 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;&display=swap");
+@import "reset.css";
+@import "status-bar.css";
 body {
   font-family: "Open Sans", sans-serif;
 }
-.status-bar {
+
+.welcome-header {
+  margin: 100px 0px;
+  text-align: center;
   display: flex;
-  justify-content: center;
-}
-.status-bar__row {
-  width: 33%;
-}
-.status-bar__row:first-child span {
-  margin-right: 5px;
-}
-.status-bar__row:nth-child(2) {
-  display: flex;
-  justify-content: center;
-}
-.status-bar__row:last-child {
-  display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
   align-items: center;
 }
-.status-bar__row:last-child .fa-lock,
-.status-bar__row:last-child .fa-battery-full {
-  margin: 0px 5px;
+.welcome-header__title {
+  margin-bottom: 50px;
+  font-size: 25px;
+  font-weight: 600;
+}
+.welcome-header__text {
+  width: 70%;
+  opacity: 0.5;
 }
