--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;&display=swap");
 @import "reset.css";
 @import "status-bar.css";
+@import "variable.css";
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -20,4 +21,23 @@ body {
 .welcome-header__text {
   width: 70%;
   opacity: 0.5;
+}
+.login-form {
+  display: flex;
+  flex-direction: column;
+  margin: 0px 30px;
+}
+.login-form input {
+  padding: 15px 0px;
+  border: none;
+  font-size: 18px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+  transition: 0.5s ease-in-out;
+}
+.login-form::placeholder {
+  color: rgba(0, 0, 0, 0.4);
+}
+.login-form input:focus {
+  border-color: var(--yellow);
 }
