--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,10 @@ body {
   padding: 15px 0px;
   border: none;
   font-size: 18px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
+}
+.login-form input:not([type="submit"]) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   transition: 0.5s ease-in-out;
 }
 .login-form::placeholder {
@@ -40,4 +42,16 @@ body {
 }
 .login-form input:focus {
   border-color: var(--yellow);
+}
+.login-form input[type="submit"] {
+  background-color: var(--yellow);
+  cursor: pointer;
+  padding: 20px 0px;
+  border-radius: 5px;
+}
+.login-form a {
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  font-size: 12px;
 }
