--- a/css/styles.css
+++ b/css/styles.css
@@ -1,57 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;&display=swap");
 @import "reset.css";
-@import "status-bar.css";
 @import "variable.css";
+
+/* Components */
+@import "components/status-bar.css";
+
+/* Screens */
+@import "screens/login.css";
+
 body {
   font-family: "Open Sans", sans-serif;
-}
-
-.welcome-header {
-  margin: 100px 0px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.welcome-header__title {
-  margin-bottom: 50px;
-  font-size: 25px;
-  font-weight: 600;
-}
-.welcome-header__text {
-  width: 70%;
-  opacity: 0.5;
-}
-.login-form {
-  display: flex;
-  flex-direction: column;
-  margin: 0px 30px;
-}
-.login-form input {
-  padding: 15px 0px;
-  border: none;
-  font-size: 18px;
-  margin-bottom: 20px;
-}
-.login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  transition: 0.5s ease-in-out;
-}
-.login-form::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-}
-.login-form input:focus {
-  border-color: var(--yellow);
-}
-.login-form input[type="submit"] {
-  background-color: var(--yellow);
-  cursor: pointer;
-  padding: 20px 0px;
-  border-radius: 5px;
-}
-.login-form a {
-  text-align: center;
-  text-decoration: none;
-  color: inherit;
-  font-size: 12px;
 }
