--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,8 +1,16 @@
 .nav {
   background-color: #f9f9fa;
-  padding: 20px 40px;
+  padding: 20px 50px;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 .nav__list {
   display: flex;
   justify-content: space-between;
+}
+.nav__btn {
+  color: #2e363e;
 }
