--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -11,6 +11,21 @@
   display: flex;
   justify-content: space-between;
 }
-.nav__btn {
+.nav__link {
   color: #2e363e;
+  position: relative;
+}
+.nav__notification {
+  background-color: tomato;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  border-radius: 15px;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
 }
