--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -5,7 +5,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px;
+  padding: var(--horizontal-space);
 }
 .screen-header__title {
   font-size: 28px;
