--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -6,6 +6,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-space);
+  margin-bottom: 15px;
 }
 .screen-header__title {
   font-size: 28px;
