--- a/note/day10/css/var.css
+++ b/note/day10/css/var.css
@@ -1,5 +1,7 @@
 :root {
   --yellow: #fece32;
+  --black: #0e0e0e;
+  --grey: #f7f7f7;
   --horizontal-space: 25px;
   --main-border: 1px solid rgba(0, 0, 0, 0.2);
 }
