--- a/note/day10/css/style.css
+++ b/note/day10/css/style.css
@@ -1,7 +1,32 @@
 @import "reset-css.css";
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap");
 @import "var.css";
 @import "header.css";
+@import "today.css";
+@import "bestseller.css";
+@import "pop.css";
 
+* {
+  box-sizing: border-box;
+}
 body {
   height: 500vh;
+  font-family: "Noto Sans KR", sans-serif;
+}
+h1 {
+  font-size: 30px;
+  font-weight: 700;
+}
+h2 {
+  font-size: 20px;
+  font-weight: 500;
+}
+h3 {
+  font-size: 15px;
+  font-weight: 400;
+}
+h4 {
+  font-size: 12px;
+  font-weight: 300;
+  color: rgba(0, 0, 0, 0.5);
 }
