media-screen 추가

--- a/note/day10/css/today.css
+++ b/note/day10/css/today.css
@@ -19,6 +19,7 @@
 .book-right {
   margin-left: 15px;
   height: 160px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
