--- a/note/day10/css/bestseller.css
+++ b/note/day10/css/bestseller.css
@@ -9,8 +9,9 @@
 }
 .bestseller__row:last-child {
   width: 100%;
+  padding-bottom: 30px;
   display: flex;
-  overflow: hidden;
+  overflow-x: auto;
 }
 .bestseller__column {
   margin-right: 25px;
