그림자 추가 별점 flex수정

--- a/note/day10/css/star.css
+++ b/note/day10/css/star.css
@@ -3,7 +3,7 @@
 }
 .star-rating,
 .star-rating span {
-  display: inline-block;
+  display: flex;
   height: 15px;
   overflow: hidden;
   background: url(star2.png) no-repeat;
