--- a/note/day10/css/bestseller.css
+++ b/note/day10/css/bestseller.css
@@ -21,6 +21,7 @@
   height: 120px;
   border-radius: 10px;
   margin-bottom: 15px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 .bestseller__info-fav {
   display: flex;
