--- a/note/day10/css/today.css
+++ b/note/day10/css/today.css
@@ -11,6 +11,7 @@
   width: 110px;
   height: 160px;
   border-radius: 10px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
 }
 .today__row {
   display: flex;
