--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -40,7 +40,7 @@
 }
 
 #splash-screen {
-  background-color: var(--yellow);
+  background-color: var(--blue);
   position: absolute;
   height: 100vh;
   width: 100vw;
