--- a/css/screens/signup.css
+++ b/css/screens/signup.css
@@ -1,51 +1,55 @@
-.welcome-header {
+.back-page {
+  font-size: 1.5rem;
+  color: var(--blue);
+  margin: 10px 10px;
+}
+
+.signup-header {
   margin: 100px 0px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.welcome-header__title {
+.signup-header__title {
   margin-bottom: 50px;
   font-size: 25px;
   font-weight: 600;
 }
-.welcome-header__text {
+.signup-header__text {
   width: 70%;
   opacity: 0.5;
 }
-.login-form {
+.sign-up-form {
   display: flex;
   flex-direction: column;
   margin: 0px 30px;
+  text-align: center;
 }
-.login-form input {
+.sign-up-form p {
+  width: 100%;
+  margin: 20px 0px;
+}
+.sign-up-form input {
   padding: 15px 0px;
   border: none;
   font-size: 18px;
   margin-bottom: 20px;
   color: white;
 }
-.login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  transition: 0.5s ease-in-out;
-}
-.login-form::placeholder {
-  color: rgba(0, 0, 0, 0.4);
-}
-.login-form input:focus {
-  border-color: var(--blue);
-}
-.login-form input[type="submit"] {
+
+.sign-up-form input[type="submit"] {
   background-color: var(--blue);
   cursor: pointer;
   padding: 20px 0px;
   border-radius: 5px;
 }
-.login-form a {
+.new-email input[type="submit"] {
+  background-color: var(--gray);
+  color: black;
+}
+.sign-up-form a {
   text-align: center;
   text-decoration: none;
   color: inherit;
-  font-size: 12px;
-  margin-bottom: 20px;
 }
