--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@
 @import "screens/more.css";
 @import "screens/settings.css";
 @import "screens/chat.css";
+@import "screens/signup.css";
 body {
   color: #2e363e;
   font-family: "Open Sans", sans-serif;
