--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -1,4 +1,4 @@
-#no-mobile {
+#check-size__big {
   position: absolute;
   z-index: 99;
   height: 100vh;
@@ -9,10 +9,23 @@
   align-items: center;
   font-size: 32px;
   top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  color: white;
+  text-shadow: 2px 2px 4px black;
+}
+#check-size__big h1 {
+  font: italic bold 3rem cursive;
+}
+#check-size__big h2 {
+  font: small-caps bold 1.5rem sans-serif;
 }
 
 @media screen and (max-width: 700px) {
-  #no-mobile {
+  #check-size__big {
     display: none;
   }
 }
