fixed-header & dot badge

--- a/css/components/badge.css
+++ b/css/components/badge.css
@@ -9,3 +9,12 @@
   color: white;
   font-weight: 600;
 }
+.more {
+  background-color: tomato;
+  width: 5px;
+  height: 5px;
+  display: flex;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
