--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -49,3 +49,10 @@
   font-size: 12px;
   margin-bottom: 20px;
 }
+.fixed-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 10;
+}
