--- a/css/screens/signup.css
+++ b/css/screens/signup.css
@@ -53,3 +53,11 @@
   text-decoration: none;
   color: inherit;
 }
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 10;
+}
