--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -38,3 +38,11 @@
   font-size: 32px;
   color: white;
 }
+
+.fixed-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 10;
+}
