--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
-  background-color: #abc1d1;
-  height: 5000vh;
+  background-color: lightslategray;
+  height: 1000vh;
 }
 
 #chat-screen .alt-header,
@@ -8,7 +8,7 @@
   top: 0;
   position: fixed;
   width: 100%;
-  background-color: #abc1d1;
+  background-color: lightslategray;
   box-sizing: border-box;
 }
 
@@ -92,7 +92,7 @@
 }
 
 .message-row--own .message__bubble {
-  background-color: var(--yellow);
+  background-color: var(--blue);
   border-top-right-radius: 0px;
   border-top-left-radius: 15px;
   margin-right: 0px;
@@ -150,7 +150,8 @@
 }
 
 .reply__column button {
-  background-color: var(--yellow);
+  background-color: var(--blue);
+  color: white;
   border: none;
   width: 40px;
   height: 40px;
