--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
 @import "screens/settings.css";
 @import "screens/chat.css";
 @import "screens/signup.css";
+@import "screens/new-find.css";
 
 body {
   color: #2e363e;
