--- a/css/screens/new-find.css
+++ b/css/screens/new-find.css
@@ -34,7 +34,7 @@
 .covid-time {
   font-size: 0.5rem;
 }
-.main-screen {
+.newfind-main-screen {
   position: relative;
   width: 90%;
   display: flex;
